卒論　リンク　修正

--- a/profile.html
+++ b/profile.html
@@ -49,7 +49,8 @@
 				<div class="navbar-collapse collapse" id="navbar-main">
 					<ul class="nav navbar-nav">
 						<li class="dropdown">
-							<a href="index.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Contents
+							<a href="index.html" class="dropdown-toggle" data-toggle="dropdown" role="button"
+								aria-expanded="false">Contents
 								<span class="caret"></span>
 							</a>
 							<ul class="dropdown-menu" role="menu">
@@ -65,7 +66,8 @@
 							</ul>
 						</li>
 						<li class="dropdown active">
-							<a href="profile.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Profile
+							<a href="profile.html" class="dropdown-toggle" data-toggle="dropdown" role="button"
+								aria-expanded="false">Profile
 								<span class="caret"></span>
 							</a>
 							<ul class="dropdown-menu" role="menu">
@@ -104,17 +106,21 @@
 				<ul style="list-style-type:none;">
 					<li>明治大学情報科学科
 						<a href="http://www.th.cs.meiji.ac.jp/" target="_blank">玉木研</a>→ 明治大学大学院新領域創造専攻
-						<a href="http://miyashita.com/" target="_blank">宮下研</a>→チームラボ</li>
+						<a href="http://miyashita.com/" target="_blank">宮下研</a>→チームラボ
+					</li>
 					<li>
-						<i class="glyphicon glyphicon-envelope"></i> akyoh9933@gmail.com</li>
+						<i class="glyphicon glyphicon-envelope"></i> akyoh9933@gmail.com
+					</li>
 				</ul>
 				<ul style="list-style-type:none;">
 					<li>趣味：電子工作・プログラミング・8mm映写機いじり・
-						<a href="https://www.dropbox.com/sh/1e70svg8g1p001g/AACb8rk-Knv6hUnIa_mD34sXa?dl=0" target="_blank">星の撮影</a>（
+						<a href="https://www.dropbox.com/sh/1e70svg8g1p001g/AACb8rk-Knv6hUnIa_mD34sXa?dl=0"
+							target="_blank">星の撮影</a>（
 						<a href="http://gutugutu3030.tumblr.com/" target="_blank">低画質版</a>）
 					</li>
 					<li>興味分野：HCI・タンジブルインタフェース・Fab・電子工作支援・プログラミング支援</li>
-					<li>使用可能言語・環境：Java(intellij・eclipse)・Processing・Arduino(・C#・mbed・openFrameworks・nodeJS・puredata・HSP)</li>
+					<li>使用可能言語・環境：Java(intellij・eclipse)・Processing・Arduino(・C#・mbed・openFrameworks・nodeJS・puredata・HSP)
+					</li>
 				</ul>
 				<p>大学生時代は電子工作支援の，院生時代は3Dプリンタ使用支援の研究をしていました．Web系は苦手なのでやりたくないです．
 					くるまで田舎めぐりしながら暮らすのが夢です．</p>
@@ -123,18 +129,22 @@
 		<div>
 			<h2>作ったものリスト</h2>
 			<p>
-				<a href="index.html">こちら</a>をごらんください．</p>
+				<a href="index.html">こちら</a>をごらんください．
+			</p>
 			<p>時間があれば
-				<a href="timeline.html">こちら</a>もごらんください．（最近サボり気味で未更新…）</p>
+				<a href="timeline.html">こちら</a>もごらんください．（最近サボり気味で未更新…）
+			</p>
 		</div>
 		<div>
 			<h2>お仕事</h2>
 			<ol>
 				<li>2017年7月24日
-					<a href="http://eonet.jp/zing/articles/_4100703.html" target="_blank">Zing!,「3Dプリンタで“声の立体化”に挑戦!?」</a>
+					<a href="http://eonet.jp/zing/articles/_4100703.html"
+						target="_blank">Zing!,「3Dプリンタで“声の立体化”に挑戦!?」</a>
 				</li>
 				<li>2017年9月22日
-					<a href="http://eonet.jp/zing/articles/_4101119.html" target="_blank">Zing!,「まるでハンドパワー！「手をかざすと動く台」をFabってみた」</a>
+					<a href="http://eonet.jp/zing/articles/_4101119.html"
+						target="_blank">Zing!,「まるでハンドパワー！「手をかざすと動く台」をFabってみた」</a>
 				</li>
 			</ol>
 		</div>
@@ -160,24 +170,30 @@
 				<li>
 					<h4>国際会議（デモ・ポスター・動画発表）</h4>
 					<ol>
-						<li>Yoh Akiyama and Homei Miyashita. Electronic kit with no current flow that uses projection mapping. CHI '14 Extended
+						<li>Yoh Akiyama and Homei Miyashita. Electronic kit with no current flow that uses projection
+							mapping. CHI '14 Extended
 							Abstracts on Human Factors in Computing Systems(CHI2014), pp.155-156, 2014.
 							<a href="http://dl.acm.org/citation.cfm?id=2559206.2579523&coll=DL&dl=ACM" target="_blank">
 								<i class="fa fa-file-pdf-o"></i>
 							</a>
 						</li>
-						<li>Yoh Akiyama and Homei Miyashita. Projectron Mapping: The Exercise and Extension of Augmented Workspaces for Learning
-							Electronic Modeling through Projection Mapping. Proceedings of the adjunct publication of the 27th annual ACM symposium
+						<li>Yoh Akiyama and Homei Miyashita. Projectron Mapping: The Exercise and Extension of Augmented
+							Workspaces for Learning
+							Electronic Modeling through Projection Mapping. Proceedings of the adjunct publication of
+							the 27th annual ACM symposium
 							on User interface software and technology(UIST2014), pp.57-58, 2014.
 							<a href="http://dl.acm.org/citation.cfm?id=2658779.2659113&coll=DL&dl=ACM" target="_blank">
 								<i class="fa fa-file-pdf-o"></i>
 							</a>
 							<strong class="text-info">(SUI2014で招待デモ発表)</strong>
 						</li>
-						<li>Yoh Akiyama and Homei Miyashita. Fitter: A System for Easily Printing Objects that Fit Real Objects. Proceedings of
-							the adjunct publication of the 29th annual ACM symposium on User interface software and technology(UIST2016), pp.129-131,
+						<li>Yoh Akiyama and Homei Miyashita. Fitter: A System for Easily Printing Objects that Fit Real
+							Objects. Proceedings of
+							the adjunct publication of the 29th annual ACM symposium on User interface software and
+							technology(UIST2016), pp.129-131,
 							2016.
-							<a href="http://dl.acm.org/citation.cfm?id=2985730&CFID=853513149&CFTOKEN=66983434" target="_blank">
+							<a href="http://dl.acm.org/citation.cfm?id=2985730&CFID=853513149&CFTOKEN=66983434"
+								target="_blank">
 								<i class="fa fa-file-pdf-o"></i>
 							</a>
 						</li>
@@ -188,7 +204,8 @@
 					<ul style="list-style-type:none;margin-left: 0;padding-left:0;">
 						<li>査読付き口頭発表
 							<ol>
-								<li>秋山耀, 宮下芳明. 3DプリンタのためのPaper User Interface. 第24回インタラクティブシステムとソフトウェアに関するワークショップ論文集(WISS2016), pp.185-191, 2016.
+								<li>秋山耀, 宮下芳明. 3DプリンタのためのPaper User Interface.
+									第24回インタラクティブシステムとソフトウェアに関するワークショップ論文集(WISS2016), pp.185-191, 2016.
 									<a href="http://www.wiss.org/WISS2016Proceedings/oral/25.pdf" target="_blank">
 										<i class="fa fa-file-pdf-o"></i>
 									</a>
@@ -200,9 +217,10 @@
 						</li>
 						<li>査読なし口頭発表
 							<ol>
-								<li>秋山耀, 宮下芳明. 3DPrinCar: 行き先に応じた物品を推薦・提供する乗用車. 研究報告ヒューマンコンピュータインタラクション, Vol.2018-HCI-176，Issue.6，No.12，2018．
+								<li>秋山耀, 宮下芳明. 3DPrinCar: 行き先に応じた物品を推薦・提供する乗用車. 研究報告ヒューマンコンピュータインタラクション,
+									Vol.2018-HCI-176，Issue.6，No.12，2018．
 									<a href="https://ipsj.ixsq.nii.ac.jp/ej/?action=pages_view_main&active_action=repository_view_main_item_detail&item_id=185427&item_no=1&page_id=13&block_id=8"
-									 target="_blank">
+										target="_blank">
 										<i class="glyphicon glyphicon-link"></i>
 									</a>
 									<a href="https://www.youtube.com/watch?v=jG5BceMWTeU" target="_blank">
@@ -214,13 +232,15 @@
 						</li>
 						<li>査読なしデモ・ポスター発表
 							<ol>
-								<li>秋山耀, 宮下芳明. 部品へのプロジェクションマッピングによる通電しない電子工作. 第21回インタラクティブシステムとソフトウェアに関するワークショップ論文集(WISS2013), pp.141-142, 2013.
+								<li>秋山耀, 宮下芳明. 部品へのプロジェクションマッピングによる通電しない電子工作.
+									第21回インタラクティブシステムとソフトウェアに関するワークショップ論文集(WISS2013), pp.141-142, 2013.
 									<a href="http://www.wiss.org/WISS2013Proceedings/demo/089.pdf" target="_blank">
 										<i class="fa fa-file-pdf-o"></i>
 									</a>
 									<strong class="text-info">[対話発表賞]</strong>
 								</li>
-								<li>加藤邦拓, 秋山耀, 宮下芳明. タッチ入力の柔軟な再配置を可能としたインタフェースの作成支援. 第22回インタラクティブシステムとソフトウェアに関するワークショップ論文集(WISS2014), pp.151-152, 2014.
+								<li>加藤邦拓, 秋山耀, 宮下芳明. タッチ入力の柔軟な再配置を可能としたインタフェースの作成支援.
+									第22回インタラクティブシステムとソフトウェアに関するワークショップ論文集(WISS2014), pp.151-152, 2014.
 									<a href="http://www.wiss.org/WISS2014Proceedings/demo/086.pdf" target="_blank">
 										<i class="fa fa-file-pdf-o"></i>
 									</a>
@@ -228,7 +248,8 @@
 										<i class="glyphicon glyphicon-film"></i>
 									</a>
 								</li>
-								<li>秋山耀, 宮下芳明. ドラッグで配線できる基板による電子工作支援. 第23回インタラクティブシステムとソフトウェアに関するワークショップ論文集(WISS2015), pp.183-184, 2015.
+								<li>秋山耀, 宮下芳明. ドラッグで配線できる基板による電子工作支援. 第23回インタラクティブシステムとソフトウェアに関するワークショップ論文集(WISS2015),
+									pp.183-184, 2015.
 									<a href="http://www.wiss.org/WISS2015Proceedings/demo/2-S02.pdf" target="_blank">
 										<i class="fa fa-file-pdf-o"></i>
 									</a>
@@ -272,8 +293,11 @@
 					<h4>その他</h4>
 					<ul style="list-style-type:none;">
 						<li>卒論　部分グラフ同型アルゴリズムの実装と回路理解支援システムへの応用.
-							<a href="http://www.th.cs.meiji.ac.jp/researches/2015/akiyama/thesis.pdf" target="_blank">
+							<a href="contents/data/卒論.pdf" target="_blank">
 								<i class="fa fa-file-pdf-o"></i>
+							</a>
+							<a href="contents/data/卒論.pdf" target="_blank">
+								<i class="fa a-file-powerpoint-o"></i>
 							</a>
 						</li>
 						<li>新たな技術を福祉にいかす体験ワークショップ, 研究事例紹介, (2017年9月6日).
