--- a/profile.html
+++ b/profile.html
@@ -296,8 +296,8 @@
 							<a href="contents/data/卒論.pdf" target="_blank">
 								<i class="fa fa-file-pdf-o"></i>
 							</a>
-							<a href="contents/data/卒論.pdf" target="_blank">
-								<i class="fa a-file-powerpoint-o"></i>
+							<a href="contents/data/秋山，卒論5分発表，配布資料.pdf" target="_blank">
+								<i class="fa fa-file-powerpoint-o"></i>
 							</a>
 						</li>
 						<li>新たな技術を福祉にいかす体験ワークショップ, 研究事例紹介, (2017年9月6日).
