いらないページを削除

--- a/library.html
+++ b/library.html
@@ -46,26 +46,27 @@
 				<div class="navbar-collapse collapse" id="navbar-main">
 					<ul class="nav navbar-nav">
 						<li class="active dropdown">
-							<a href="index.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Contents <span class="caret"></span></a>
+							<a href="index.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Contents
+								<span class="caret"></span>
+							</a>
 							<ul class="dropdown-menu" role="menu">
-								<li><a href="index.html">Products</a></li>
-								<li><a href="library.html">Libraries</a></li>
+								<li>
+									<a href="index.html">Products</a>
+								</li>
+								<li>
+									<a href="library.html">Libraries</a>
+								</li>
 								<li>
 									<a href="app/index.html">Apps</a>
 								</li>
 							</ul>
 						</li>
-
-						
-						<li class="dropdown">
-							<a href="profile.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Profile <span class="caret"></span></a>
-							<ul class="dropdown-menu" role="menu">
-								<li><a href="profile.html">日本語</a></li>
-								<li><a href="profileEng.html">English</a></li>
-							</ul>
+						<li>
+							<a href="profile.html">Profile</a>
 						</li>
-						<li><a href="https://twitter.com/gutugutu3030"><i class="fa fa-twitter"></i> Twitter</a></li>
-						<li><a href="https://sites.google.com/view/gutugutu3030/home">備忘録</a></li>
+						<li>
+							<a href="https://sites.google.com/view/gutugutu3030/home">備忘録</a>
+						</li>
 
 					</ul>
 				</div>
