--- a/index.html
+++ b/index.html
@@ -65,24 +65,8 @@
 								</li>
 							</ul>
 						</li>
-
-
-						<li class="dropdown">
-							<a href="profile.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Profile
-								<span class="caret"></span>
-							</a>
-							<ul class="dropdown-menu" role="menu">
-								<li>
-									<a href="profile.html">日本語</a>
-								</li>
-								<li>
-									<a href="profileEng.html">English</a>
-								</li>
-							</ul>
-						</li>
 						<li>
-							<a href="https://twitter.com/gutugutu3030">
-								<i class="fa fa-twitter"></i> Twitter</a>
+							<a href="profile.html">Profile</a>
 						</li>
 						<li>
 							<a href="https://sites.google.com/view/gutugutu3030/home">備忘録</a>
@@ -98,8 +82,6 @@
 			<p>制作物一覧です．動画一覧は
 				<a href="https://www.youtube.com/playlist?list=PLQyFKRbKsHDv9lAgn7kHZCq7V1gATlHlU" target="_Blank">こちら</a>．制作したライブラリ一覧は
 				<a href="library.html">こちら</a>．</p>
-			<p>時間があれば
-				<a href="timeline.html">こちら</a>もごらんください．</p>
 		</div>
 
 		<div class="row">
