--- a/profile.html
+++ b/profile.html
@@ -48,9 +48,8 @@
 				</div>
 				<div class="navbar-collapse collapse" id="navbar-main">
 					<ul class="nav navbar-nav">
-						<li class="dropdown">
-							<a href="index.html" class="dropdown-toggle" data-toggle="dropdown" role="button"
-								aria-expanded="false">Contents
+						<li class="active dropdown">
+							<a href="index.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Contents
 								<span class="caret"></span>
 							</a>
 							<ul class="dropdown-menu" role="menu">
@@ -65,27 +64,13 @@
 								</li>
 							</ul>
 						</li>
-						<li class="dropdown active">
-							<a href="profile.html" class="dropdown-toggle" data-toggle="dropdown" role="button"
-								aria-expanded="false">Profile
-								<span class="caret"></span>
-							</a>
-							<ul class="dropdown-menu" role="menu">
-								<li>
-									<a href="profile.html">日本語</a>
-								</li>
-								<li>
-									<a href="profileEng.html">English</a>
-								</li>
-							</ul>
-						</li>
 						<li>
-							<a href="https://twitter.com/gutugutu3030">
-								<i class="fa fa-twitter"></i> Twitter</a>
+							<a href="profile.html">Profile</a>
 						</li>
 						<li>
 							<a href="https://sites.google.com/view/gutugutu3030/home">備忘録</a>
 						</li>
+
 					</ul>
 				</div>
 			</div>
@@ -130,9 +115,6 @@
 			<h2>作ったものリスト</h2>
 			<p>
 				<a href="index.html">こちら</a>をごらんください．
-			</p>
-			<p>時間があれば
-				<a href="timeline.html">こちら</a>もごらんください．（最近サボり気味で未更新…）
 			</p>
 		</div>
 		<div>
