--- a/qr.html
+++ b/qr.html
@@ -1,87 +1,91 @@
 <!DOCTYPE html>
 <html>
 
+<head>
+	<meta name="google-site-verification" content="G8Ld4AL7hUV0wr4ONAumt7CRVi5l8gZ3LO9CbFaaIoU" />
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<title>gutugutu3030 - リンク共有サイト</title>
+	<meta charset="utf-8">
+	<meta name="description" content="">
+	<meta name="author" content="">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
+	<script src="js/jquery.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+	<script src="js/jquery.equalheight.min.js"></script>
+	<style type="text/css">
+		body {
+			padding-top: 90px;
+		}
+
+		.img-responsive-overwrite {
+			margin: 0 auto;
+		}
+
+		.panelHeader {
+			color: rgb(33, 125, 187);
+			;
+		}
+	</style>
+	<!--&#91;if lt IE 9&#93;>
+		<script src="//cdn.jsdelivr.net/html5shiv/3.7.2/html5shiv.min.js"></script>
+		<script src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
+	<!&#91;endif&#93;-->
+	<link rel="shortcut icon" href="favicon.ico">
+</head>
+
 <body>
+	<header>
+		<div class="navbar navbar-default navbar-fixed-top">
+			<div class="container-fluid">
+				<div class="navbar-header">
+					<a href="/" class="navbar-brand">gutugutu3030</a>
+					<button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+				</div>
+				<div class="navbar-collapse collapse" id="navbar-main">
+					<ul class="nav navbar-nav">
+						<li class="active dropdown">
+							<a href="index.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Contents
+								<span class="caret"></span>
+							</a>
+							<ul class="dropdown-menu" role="menu">
+								<li>
+									<a href="index.html">Products</a>
+								</li>
+								<li>
+									<a href="library.html">Libraries</a>
+								</li>
+								<li>
+									<a href="app/index.html">Apps</a>
+								</li>
+							</ul>
+						</li>
+						<li>
+							<a href="profile.html">Profile</a>
+						</li>
+						<li>
+							<a href="https://sites.google.com/view/gutugutu3030/home">備忘録</a>
+						</li>
 
-    <head>
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title>リンク共有サイト</title>
-        <meta charset="utf-8">
-        <meta name="description" content="">
-        <meta name="author" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-        <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
-        <script src="js/jquery.min.js"></script>
-
-        <style type="text/css">
-            body {
-                padding-top: 80px;
-            }
-
-            .img-responsive-overwrite {
-                margin: 0 auto;
-            }
-
-            .panelHeader {
-                color: rgb(33, 125, 187);
-                ;
-            }
-        </style>
-        <!--&#91;if lt IE 9&#93;>
-                    <script src="//cdn.jsdelivr.net/html5shiv/3.7.2/html5shiv.min.js"></script>
-                    <script src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
-                <!&#91;endif&#93;-->
-        <link rel="shortcut icon" href="favicon.ico">
-    </head>
-
-    <body>
-        <header>
-            <div class="navbar navbar-default navbar-fixed-top">
-                <div class="container-fluid">
-                    <div class="navbar-header">
-                        <a href="/" class="navbar-brand">gutugutu3030</a>
-                        <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
-                    </div>
-                    <div class="navbar-collapse collapse" id="navbar-main">
-                        <ul class="nav navbar-nav">
-                            <li class="active dropdown">
-                                <a href="index.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Contents <span class="caret"></span></a>
-                                <ul class="dropdown-menu" role="menu">
-                                    <li><a href="index.html">Products</a></li>
-                                    <li><a href="library.html">Libraries</a></li>
-                                </ul>
-                            </li>
-
-
-                            <li class="dropdown">
-                                <a href="profile.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Profile <span class="caret"></span></a>
-                                <ul class="dropdown-menu" role="menu">
-                                    <li><a href="profile.html">日本語</a></li>
-                                    <li><a href="profileEng.html">English</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="https://twitter.com/gutugutu3030"><i class="fa fa-twitter"></i> Twitter</a></li>
-                            <li><a href="https://sites.google.com/view/gutugutu3030/home">備忘録</a></li>
-
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </header>
-        <div class="container">
+					</ul>
+				</div>
+			</div>
+		</div>
+	</header>
+    <main>
+            <div class="container">
             <div class="row" id="main">
                 <div class="col-md-12">
                     <h3>ロード中...</h3>
                 </div>
             </div>
         </div>
-    </body>
-    <script type="text/javascript">
+         <script type="text/javascript">
         $.get("https://script.googleusercontent.com/macros/echo?user_content_key=nWY3Hz7YtGcOBaYzHq8B_fmqtEIf3dQN7WVWoikShB22P69Ls4QRVxZUDG3X5Gr7oF4kjm88xnKUyWjnO411ZhuFm5o2jw10m5_BxDlH2jW0nuo2oDemN9CCS2h10ox_1xSncGQajx_ryfhECjZEnPe3sUsAKc7lpUPI30OmE1QNGiwQcW9hO5jOV091LPc2pwXHM1tque563uStV80xpMDyOw0rRDtU&lib=Ma5avj4HuM6XliiQgOJGGym05Xyz2F5qi",
             function (d) {
                 var data = JSON.parse(d);
@@ -99,5 +103,6 @@
                 }
             });
     </script>
-
+    </main>
+</body>
 </html>
