--- a/extend.html
+++ b/extend.html
@@ -2,23 +2,27 @@
 <html>
 
 <head>
+	<meta name="google-site-verification" content="G8Ld4AL7hUV0wr4ONAumt7CRVi5l8gZ3LO9CbFaaIoU" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>test</title>
+	<title>gutugutu3030 - ページ1</title>
 	<meta charset="utf-8">
 	<meta name="description" content="">
 	<meta name="author" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
+	<script src="js/jquery.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+	<script src="js/jquery.equalheight.min.js"></script>
 	<style type="text/css">
 		body {
-			padding-top: 80px;
+			padding-top: 90px;
 		}
-		
+
 		.img-responsive-overwrite {
 			margin: 0 auto;
 		}
-		
+
 		.panelHeader {
 			color: rgb(33, 125, 187);
 			;
@@ -45,41 +49,37 @@
 				</div>
 				<div class="navbar-collapse collapse" id="navbar-main">
 					<ul class="nav navbar-nav">
-						<li><a href="index.html">Contents</a></li>
-						<li><a href="profile.html">Profile</a></li>
-						<li><a href="https://twitter.com/gutugutu3030"><i class="fa fa-twitter"></i> Twitter</a></li>
-						<li><a href="https://sites.google.com/view/gutugutu3030/home">備忘録</a></li>
+						<li class="active dropdown">
+							<a href="index.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Contents
+								<span class="caret"></span>
+							</a>
+							<ul class="dropdown-menu" role="menu">
+								<li>
+									<a href="index.html">Products</a>
+								</li>
+								<li>
+									<a href="library.html">Libraries</a>
+								</li>
+								<li>
+									<a href="app/index.html">Apps</a>
+								</li>
+							</ul>
+						</li>
+						<li>
+							<a href="profile.html">Profile</a>
+						</li>
+						<li>
+							<a href="https://sites.google.com/view/gutugutu3030/home">備忘録</a>
+						</li>
+
 					</ul>
 				</div>
 			</div>
 		</div>
 	</header>
-	<div class="container">
-		<div class="form-group">
-			<div class="checkbox">
-				<label>
-					<input type="checkbox" id="switch_ch" name="switch_ch" checked="checked"> SwitchScience
-				</label>
-				<label>
-					<input type="checkbox" id="aiten_ch" checked="checked"> Aitendo
-				</label>
-				<label>
-					<input type="checkbox" id="sengok_ch" checked="checked"> 千石
-				</label>
-				<label>
-					<input type="checkbox" id="marutu_ch" checked="checked"> マルツ
-				</label>
-				<label>
-					<input type="checkbox" id="aki_ch"> 秋月
-				</label>
-			</div>
-		<input type="text" class="form-control" placeholder="Search" id="searchStr" name="searchStr">
-		<button type="submit" class="btn btn-default" id="search" name="search">検索</button>
-		</div>		
-	</div>
-	<script src="js/jquery.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/search.js"></script>
+    <main>
+            <h2>ページ1のコンテンツ</h2>
+    <p>このページは共通のレイアウトを使用しています。</p>
+    </main>
 </body>
-
 </html>
