--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta name="google-site-verification" content="G8Ld4AL7hUV0wr4ONAumt7CRVi5l8gZ3LO9CbFaaIoU" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>gutugutu3030</title>
+	<title>gutugutu3030 - 制作物</title>
 	<meta charset="utf-8">
 	<meta name="description" content="">
 	<meta name="author" content="">
@@ -77,7 +77,8 @@
 			</div>
 		</div>
 	</header>
-	<div class="container">
+    <main>
+        	<div class="container">
 		<div>
 			<p>制作物一覧です．動画一覧は
 				<a href="https://www.youtube.com/playlist?list=PLQyFKRbKsHDv9lAgn7kHZCq7V1gATlHlU" target="_Blank">こちら</a>．制作したライブラリ一覧は
@@ -662,12 +663,6 @@
 				</div>
 			</div>
 		</div>
-	</div>
-	<script type="text/javascript">
-		$(window).load(function () {
-			$('.grid img').equalHeight();
-		});
-	</script>
+    </main>
 </body>
-
 </html>
