--- a/library.html
+++ b/library.html
@@ -2,23 +2,27 @@
 <html>
 
 <head>
+	<meta name="google-site-verification" content="G8Ld4AL7hUV0wr4ONAumt7CRVi5l8gZ3LO9CbFaaIoU" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>gutugutu3030</title>
+	<title>gutugutu3030 - ライブラリ</title>
 	<meta charset="utf-8">
 	<meta name="description" content="">
 	<meta name="author" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
+	<script src="js/jquery.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+	<script src="js/jquery.equalheight.min.js"></script>
 	<style type="text/css">
 		body {
-			padding-top: 80px;
+			padding-top: 90px;
 		}
-		
+
 		.img-responsive-overwrite {
 			margin: 0 auto;
 		}
-		
+
 		.panelHeader {
 			color: rgb(33, 125, 187);
 			;
@@ -73,7 +77,8 @@
 			</div>
 		</div>
 	</header>
-	<div class="container">
+    <main>
+        <div class="container">
 		<div>
 			<h1>ライブラリ</h1>
 			<p>作成したライブラリやダウンロード可能コンテンツを公開しております．JavaやProcessingのためのライブラリがほとんどです．</p>
@@ -430,9 +435,7 @@
 				</div>
 			</div>
 		</div>
-
-		<script src="js/jquery.min.js"></script>
-		<script src="js/bootstrap.min.js"></script>
+	</div>
+    </main>
 </body>
-
 </html>
