--- a/profile.html
+++ b/profile.html
@@ -2,29 +2,30 @@
 <html>
 
 <head>
+	<meta name="google-site-verification" content="G8Ld4AL7hUV0wr4ONAumt7CRVi5l8gZ3LO9CbFaaIoU" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>gutugutu3030 - profile</title>
+	<title>gutugutu3030 - プロファイル</title>
 	<meta charset="utf-8">
 	<meta name="description" content="">
 	<meta name="author" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
+	<script src="js/jquery.min.js"></script>
+	<script src="js/bootstrap.min.js"></script>
+	<script src="js/jquery.equalheight.min.js"></script>
 	<style type="text/css">
 		body {
-			padding-top: 80px;
+			padding-top: 90px;
 		}
 
-		ol li {
-			list-style-type: none;
-			list-style-position: inside;
-			counter-increment: cnt;
-			margin-bottom: 0.5em;
+		.img-responsive-overwrite {
+			margin: 0 auto;
 		}
 
-		ol li:before {
-			display: marker;
-			content: "[" counter(cnt) "] ";
+		.panelHeader {
+			color: rgb(33, 125, 187);
+			;
 		}
 	</style>
 	<!--&#91;if lt IE 9&#93;>
@@ -76,7 +77,8 @@
 			</div>
 		</div>
 	</header>
-	<div class="container">
+    <main>
+        	<div class="container">
 		<div>
 			<h1>Profile</h1>
 		</div>
@@ -313,8 +315,7 @@
 			</ol>
 		</div>
 	</div>
-	<script src="js/jquery.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-</body>
 
+    </main>
+</body>
 </html>
