--- a/pebble/app/src/main/resources/contents/3DPrinCar.html
+++ b/pebble/app/src/main/resources/contents/3DPrinCar.html
@@ -90,7 +90,8 @@
 	</header>
 	<div class="container">
 		<section>
-			<h1>3DPrinCar: An Automotive System That Recommends and Provides Goods Responded to the Destination
+			<h1>3DPrinCar
+				<small>行き先に応じた物品を推薦・提供する乗用車</small>
 			</h1>
 		</section>
 		<section>
@@ -102,61 +103,38 @@
 					</div>
 				</div>
 				<div class="col-sm-12">
-					<h2>Abstract</h2>
-					<p>In this paper, we proposed "3DPrinCar", which suggests and provides goods depending on destinations by combining 3D
-						Printer and car navigation system. For example, destination is related to sea, 3DPrinCar suggests goods related to
-						sea. And 3DPrinCar prepare two providing methods; 3D Printing goods inside of a car or stopping by shop and purchasing
-						goods. If users choose 3D Printing, users arrivals at the destination and system finishes 3D Printing at same time
-						by controling 3D Printing accuracy. If users choose Stopping by shop, system add the shop as transit point to car navigation
-						system.</p>
-					<p>We reseach effects on travel experience by 3DPrinCar. We conducted experiments of 8 trips. users got 9 kinds, 16
-						goods by 3D printing (2 goods of those is error of printing); They are playthings(boomerang and frisbee), items in
-						the car (PET bottle holder, carabiner, trash case), cutlery (cup, dish). Users 3D printed and used them at destination
-						or in the car at return path by more comfortably. Users stop by shop once and didn't buy anything.</p>
-					<p> By goods suggested by the system, not only inconvenience in the car and destination were improved, but also activities
-						at the destination were diversified and the range of action were expanded.</p>
+					<h2>概要</h2>
+					<p>本稿で提案するのは，3Dプリンタ・カーナビと統合し，行き先に応じた物品推薦・提供を行う乗用車"3DPrinCar"である．</p>
+					<p>行き先が海なら海用品（サンダル・スコップなど）を推薦し，さらに，車内で3Dプリントするか，移動途中に店舗を経由して購入するかを手段として提供する．3Dプリントする場合は，到着時間に合わせて精度を調整し，最良の品質で到着までに造形完了する．店舗購入の場合は，カーナビの経由地点として自動設定する．</p>
+					<p>提案システムによる旅行体験の変化を調査分析すべく，本稿では旅行のケーススタディを8件実施した．</p>
 				</div>
 			</div>
 		</section>
 		<section>
 			<div class="row">
-				<!--
 				<div class="col-sm-12">
-					<h2>Introduction</h2>
-					<p></p>
+					<h2>システム</h2>
 					<p>ユーザがカーナビに行き先を設定すると，提案システムはその行き先に応じた物品を検索し，インタフェース上にカテゴリ一覧として表示する． 例えば，行き先が富士山であった場合は「山」カテゴリから「三脚」「フリスビー」「ゴミ箱」などが推薦される．インタフェース上には，推薦された物品の画像が表示され，具体的な物品を選択すると入手方法が表示される．
 					</p>
 					<p>そしてユーザは，その物品を3Dプリントして到着までに入手するか，店舗を経由し購入するかを選択することができる． 例えば，店舗に立ち寄ることで，「安く」入手することもできるし，搭載された3Dプリンタを使用して「楽」に入手することもできる．
 					</p>
 					<p>このような選択肢ごとのメリットは，インタフェース上に「安」，「早」，「楽」というアイコンで表示される．3Dプリントする場合は，造形精度や造形時間，フィラメントの使用量などを調整した複数の選択肢を提供し，ユーザのニーズに合わせた物品の提供が可能である．</p>
 				</div>
-			-->
 				<div class="col-sm-12">
 					<div class="thumbnail">
-						<img src="systemEng.jpg">
+						<img src="system.jpg">
 						<div class="caption">
-							<p>System configuration: a) System interface overview (front passenger seat), b) 3D printer (trunk), c) Recommending
-								interface.</p>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-sm-12">
-					<div class="thumbnail">
-						<img src="table.png">
-						<div class="caption">
-							<p>Experimental details (distance and time counted from the start of the first 3D printing to the end of that)</p>
+							<p>システム構成; a)システムインタフェース概観（助手席）, b)3Dプリンタ（トランク）, c)推薦インタフェース.</p>
 						</div>
 					</div>
 				</div>
 			</div>
 		</section>
 		<section>
-			<h2>bibliographic information</h2>
+			<h2>書誌情報</h2>
 			<ol>
 
-				<li>Yoh Akiyama and Homei Miyashita. 3DPrinCar: An Automotive System That Recommends and Provides Goods Responded to the Destination.
-					IPSJ SIGHCI Technical Report, Vol.2018-HCI-176，Issue.6，No.12，2018．(Japanese)
+				<li>秋山耀, 宮下芳明. 3DPrinCar: 行き先に応じた物品を推薦・提供する乗用車. 研究報告ヒューマンコンピュータインタラクション, Vol.2018-HCI-176，Issue.6，No.12，2018．
 					<a href="https://ipsj.ixsq.nii.ac.jp/ej/?action=pages_view_main&active_action=repository_view_main_item_detail&item_id=185427&item_no=1&page_id=13&block_id=8"
 					 target="_blank">
 						<i class="glyphicon glyphicon-link"></i>
