ディレクトリの階層による変更をテンプレートで吸収

--- a/pebble/app/src/main/resources/base.html
+++ b/pebble/app/src/main/resources/base.html
@@ -9,11 +9,11 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
-	<script src="js/jquery.min.js"></script>
-	<script src="js/bootstrap.min.js"></script>
-	<script src="js/jquery.equalheight.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="{{ directory }}css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="{{ directory }}css/font-awesome.min.css">
+	<script src="{{ directory }}js/jquery.min.js"></script>
+	<script src="{{ directory }}js/bootstrap.min.js"></script>
+	<script src="{{ directory }}js/jquery.equalheight.min.js"></script>
 	<style type="text/css">
 		body {
 			padding-top: 90px;
@@ -50,23 +50,23 @@
 				<div class="navbar-collapse collapse" id="navbar-main">
 					<ul class="nav navbar-nav">
 						<li class="active dropdown">
-							<a href="index.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Contents
+							<a href="{{ directory }}index.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Contents
 								<span class="caret"></span>
 							</a>
 							<ul class="dropdown-menu" role="menu">
 								<li>
-									<a href="index.html">Products</a>
+									<a href="{{ directory }}index.html">Products</a>
 								</li>
 								<li>
-									<a href="library.html">Libraries</a>
+									<a href="{{ directory }}library.html">Libraries</a>
 								</li>
 								<li>
-									<a href="app/index.html">Apps</a>
+									<a href="{{ directory }}app/index.html">Apps</a>
 								</li>
 							</ul>
 						</li>
 						<li>
-							<a href="profile.html">Profile</a>
+							<a href="{{ directory }}profile.html">Profile</a>
 						</li>
 						<li>
 							<a href="https://sites.google.com/view/gutugutu3030/home">備忘録</a>
