ヘッダを共通化

--- a/contents/8mmFilm/projector/index.html
+++ b/contents/8mmFilm/projector/index.html
@@ -2,36 +2,37 @@
 <html>
 
 <head>
+	<meta name="google-site-verification" content="G8Ld4AL7hUV0wr4ONAumt7CRVi5l8gZ3LO9CbFaaIoU" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>gutugutu3030 - ミニミニ8mm映写機</title>
 	<meta charset="utf-8">
 	<meta name="description" content="">
 	<meta name="author" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="../../../css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="../../../css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="./../../../css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="./../../../css/font-awesome.min.css">
+	<script src="./../../../js/jquery.min.js"></script>
+	<script src="./../../../js/bootstrap.min.js"></script>
+	<script src="./../../../js/jquery.equalheight.min.js"></script>
 	<style type="text/css">
 		body {
-			padding-top: 80px;
+			padding-top: 90px;
 		}
-		
-		ol li {
-			list-style-type: none;
-			list-style-position: inside;
-			counter-increment: cnt;
-			margin-bottom: 0.5em;
+
+		.img-responsive-overwrite {
+			margin: 0 auto;
 		}
-		
-		ol li:before {
-			display: marker;
-			content: "[" counter(cnt) "] ";
+
+		.panelHeader {
+			color: rgb(33, 125, 187);
+			;
 		}
 	</style>
-<!--&#91;if lt IE 9&#93;>
+	<!--&#91;if lt IE 9&#93;>
 		<script src="//cdn.jsdelivr.net/html5shiv/3.7.2/html5shiv.min.js"></script>
 		<script src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.4.2/respond.min.js"></script>
 	<!&#91;endif&#93;-->
-<link rel="shortcut icon" href="../../../favicon.ico">
+	<link rel="shortcut icon" href="favicon.ico">
 </head>
 
 <body>
@@ -49,29 +50,35 @@
 				<div class="navbar-collapse collapse" id="navbar-main">
 					<ul class="nav navbar-nav">
 						<li class="active dropdown">
-							<a href="../../../index.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Contents <span class="caret"></span></a>
+							<a href="./../../../index.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Contents
+								<span class="caret"></span>
+							</a>
 							<ul class="dropdown-menu" role="menu">
-								<li><a href="../../../index.html">Products</a></li>
-								<li><a href="../../../library.html">Libraries</a></li>
+								<li>
+									<a href="./../../../index.html">Products</a>
+								</li>
+								<li>
+									<a href="./../../../library.html">Libraries</a>
+								</li>
+								<li>
+									<a href="./../../../app/index.html">Apps</a>
+								</li>
 							</ul>
 						</li>
-
-						<li class="dropdown">
-							<a href="../../../profile.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Profile <span class="caret"></span></a>
-							<ul class="dropdown-menu" role="menu">
-								<li><a href="../../../profile.html">日本語</a></li>
-								<li><a href="../../../profileEng.html">English</a></li>
-							</ul>
+						<li>
+							<a href="./../../../profile.html">Profile</a>
 						</li>
-						<li><a href="https://twitter.com/gutugutu3030"><i class="fa fa-twitter"></i> Twitter</a></li>
-						<li><a href="https://sites.google.com/view/gutugutu3030/home">備忘録</a></li>
+						<li>
+							<a href="https://sites.google.com/view/gutugutu3030/home">備忘録</a>
+						</li>
 
 					</ul>
 				</div>
 			</div>
 		</div>
 	</header>
-	<div class="container">
+    <main>
+        <div class="container">
 		<section>
 			<h1>ミニミニ8mm映写機 <small>3Dプリンタとレーザカッターを用いた8mm映写機の自作</small></h1>
 		</section>
@@ -153,9 +160,7 @@ frameborder="0" allowfullscreen></iframe>
 		<li>第１回みたかFabコンテストで発展賞を受賞しました！ <a href="https://fabmitaka.co/docs/2017030600016/" target="_blank">https://fabmitaka.co/docs/2017030600016/</a></li>
 
 		</section>
-		</div>
-		<script src="../../,,/js/jquery.min.js"></script>
-		<script src="../../../js/bootstrap.min.js"></script>
-		</body>
-
-		</html>
+	</div>
+    </main>
+</body>
+</html>
