--- a/pebble/app/src/main/resources/contents/8mmFilm.game.html
+++ b/pebble/app/src/main/resources/contents/8mmFilm.game.html
@@ -4,7 +4,7 @@
 
 {% block content %}
 
-<div class="container"></div>
+<div class="container">
 		<section>
 			<h1>ICレスゲーム機 <small>映写機で音ゲー作ろうとした話</small></h1>
 		</section>
