--- a/contents/8mmFilm/game/index.html
+++ b/contents/8mmFilm/game/index.html
@@ -79,7 +79,7 @@
 	</header>
     <main>
         
-<div class="container"></div>
+<div class="container">
 		<section>
 			<h1>ICレスゲーム機 <small>映写機で音ゲー作ろうとした話</small></h1>
 		</section>
