--- a/pebble/app/src/main/resources/base.html
+++ b/pebble/app/src/main/resources/base.html
@@ -4,7 +4,7 @@
 <head>
 	<meta name="google-site-verification" content="G8Ld4AL7hUV0wr4ONAumt7CRVi5l8gZ3LO9CbFaaIoU" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>gutugutu3030 - {% block title %}タイトル{% endblock %}</title>
+	<title>gutugutu3030 - {% block title %}{% endblock %}</title>
 	<meta charset="utf-8">
 	<meta name="description" content="">
 	<meta name="author" content="">
