コンテンツリストをyamlから生成するように

--- a/contents/kirbyPC/index.html
+++ b/contents/kirbyPC/index.html
@@ -89,7 +89,7 @@
 				<font size="7">俺の
 					<font color="#ff0099">カービィ</font>，インテル入ってるんだぜ！！</font>
 			</p>
-			<img src="PC.gif" class="img-responsive img-responsive-overwrite">
+			<img src="thumbnail.gif" class="img-responsive img-responsive-overwrite">
 			<p></p>
 		</section>
 		<setion>
