--- a/profile.html
+++ b/profile.html
@@ -91,22 +91,9 @@
 					<small>Yoh Akiyama</small>
 				</h2>
 				<ul style="list-style-type:none;">
-					<li>明治大学情報科学科
-						<a href="http://www.th.cs.meiji.ac.jp/" target="_blank">玉木研</a>→ 明治大学大学院新領域創造専攻
-						<a href="http://miyashita.com/" target="_blank">宮下研</a>→チームラボ
-					</li>
-					<li>
-						<i class="glyphicon glyphicon-envelope"></i> akyoh9933@gmail.com
-					</li>
-				</ul>
-				<ul style="list-style-type:none;">
-					<li>趣味：電子工作・プログラミング・8mm映写機いじり・
-						<a href="https://www.dropbox.com/sh/1e70svg8g1p001g/AACb8rk-Knv6hUnIa_mD34sXa?dl=0"
-							target="_blank">星の撮影</a>（
-						<a href="http://gutugutu3030.tumblr.com/" target="_blank">低画質版</a>）
-					</li>
+					<li>趣味：電子工作・プログラミング・8mm映写機いじり・星の撮影</li>
 					<li>興味分野：HCI・タンジブルインタフェース・Fab・電子工作支援・プログラミング支援</li>
-					<li>使用可能言語・環境：Java(intellij・eclipse)・Processing・Arduino(・C#・mbed・openFrameworks・nodeJS・puredata・HSP)
+					<li>使用可能言語・環境：Java・Processing・C++・Arduino(・C#・mbed・openFrameworks・nodeJS・puredata・HSP・python)
 					</li>
 				</ul>
 				<p>大学生時代は電子工作支援の，院生時代は3Dプリンタ使用支援の研究をしていました．Web系は苦手なのでやりたくないです．
@@ -120,17 +107,49 @@
 			</p>
 		</div>
 		<div>
-			<h2>お仕事</h2>
-			<ol>
-				<li>2017年7月24日
-					<a href="http://eonet.jp/zing/articles/_4100703.html"
-						target="_blank">Zing!,「3Dプリンタで“声の立体化”に挑戦!?」</a>
-				</li>
-				<li>2017年9月22日
-					<a href="http://eonet.jp/zing/articles/_4101119.html"
-						target="_blank">Zing!,「まるでハンドパワー！「手をかざすと動く台」をFabってみた」</a>
-				</li>
-			</ol>
+			<h2>経歴</h2>
+			<ul>
+									<li>2012/4     明治大学理工学部情報科学科入学 
+										</li>
+									<li>2015/7     玉木研所属 
+										</li>
+									<li>2016/3     明治大学理工学部情報科学科卒業 
+										</li>
+									<li>2016/4     明治大学大学院理工学研究科新領域創造専攻入学（宮下研） 
+										</li>
+									<li>2017/7/24  Zing!にて「3Dプリンタで“声の立体化”に挑戦!?」記事掲載 
+											<a href="http://eonet.jp/zing/articles/_4100703.html" target="_blank">
+							<i class="glyphicon glyphicon-link"></i>
+						</a>
+										</li>
+									<li>2017/9/6   新たな技術を福祉にいかす体験ワークショップにて研究事例紹介 
+											<a href="http://goodjobcenter.com/topics/report/959/" target="_blank">
+							<i class="glyphicon glyphicon-link"></i>
+						</a>
+										</li>
+									<li>2017/9/22  Zing!にてまるでハンドパワー！「手をかざすと動く台」をFabってみた」記事掲載 
+											<a href="http://eonet.jp/zing/articles/_4101119.html" target="_blank">
+							<i class="glyphicon glyphicon-link"></i>
+						</a>
+										</li>
+									<li>2018/3     明治大学大学院理工学研究科新領域創造専攻卒業・工学（修士）取得 
+										</li>
+									<li>2018/4     チームラボ株式会社入社 
+										</li>
+									<li>2022       インタラクティブシステムとソフトウェアに関するワークショップ(WISS)にてプログラム委員に就任 
+											<a href="https://www.wiss.org/" target="_blank">
+							<i class="glyphicon glyphicon-link"></i>
+						</a>
+										</li>
+							</ul>
+		</div>
+		<div>
+			<h2>資格</h2>
+			<ul>
+									<li>普通自動車第一種運転免許（AT限定）</li>
+									<li>第二種電気工事士</li>
+									<li>Silver SE 17</li>
+							</ul>
 		</div>
 		<div>
 			<h2>Publications</h2>
@@ -282,11 +301,6 @@
 							</a>
 							<a href="contents/data/秋山，卒論5分発表，配布資料.pdf" target="_blank">
 								<i class="fa fa-file-powerpoint-o"></i>
-							</a>
-						</li>
-						<li>新たな技術を福祉にいかす体験ワークショップ, 研究事例紹介, (2017年9月6日).
-							<a href="http://goodjobcenter.com/topics/report/959/" target="_blank">
-								<i class="glyphicon glyphicon-link"></i>
 							</a>
 						</li>
 					</ul>
