--- a/contents/Fitter/index.html
+++ b/contents/Fitter/index.html
@@ -19,13 +19,12 @@
 			margin-top: 90px;
 		}
 
-		.img-responsive-overwrite {
-			margin: 0 auto;
+		body {
+			background-color: #f9f9f9;
 		}
 
-		.panelHeader {
-			color: rgb(33, 125, 187);
-			;
+		.card-body {
+			background-color: #f6faff;
 		}
 	</style>
 	<link rel="shortcut icon" href="favicon.ico">
@@ -67,7 +66,7 @@
 		</section>
 		<section>
 			<div class="thumbnail">
-				<img src="process.png">
+				<img src="process.png" class="img-fluid">
 				<div class="caption">
 					<p>モデリングプロセス</p>
 				</div>
@@ -82,9 +81,9 @@
 					<p>今回システムが対象とするのは，入れ物の作成とアクセサリの大きさ合わせである．</p>
 				</div>
 				<div class="col-sm-6">
-					<div class="embed-responsive embed-responsive-16by9" style="margin-top: 5px;margin-bottom: 5px">
+					<div class="ratio ratio-16x9" style="margin-top: 5px;margin-bottom: 5px">
 						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/DO-5nfyj7cY" frameborder="0" allowfullscreen></iframe>
-						frameborder="0" allowfullscreen></iframe>
+
 					</div>
 				</div>
 			</div>
@@ -93,7 +92,7 @@
 			<div class="row">
 				<div class="col-sm-5">
 					<div class="thumbnail">
-						<img src="system.png">
+						<img src="system.png" class="img-fluid">
 						<div class="caption">
 							<p>システム</p>
 						</div>
@@ -116,7 +115,7 @@
 				</div>
 				<div class="col-sm-5">
 					<div class="thumbnail">
-						<img src="strokeToModel.png">
+						<img src="strokeToModel.png" class="img-fluid">
 						<div class="caption">
 							<p>モデリングシステム：a)入力ストロークが輪でない場合 b)入力ストロークが輪の場合</p>
 						</div>
