--- a/contents/Theater/index.html
+++ b/contents/Theater/index.html
@@ -19,13 +19,12 @@
 			margin-top: 90px;
 		}
 
-		.img-responsive-overwrite {
-			margin: 0 auto;
+		body {
+			background-color: #f9f9f9;
 		}
 
-		.panelHeader {
-			color: rgb(33, 125, 187);
-			;
+		.card-body {
+			background-color: #f6faff;
 		}
 	</style>
 	<link rel="shortcut icon" href="favicon.ico">
@@ -81,7 +80,7 @@
 					<p>絵は<a href="https://twitter.com/konotomomi" target="_blank">@konotomomi</a>さんが描いてくれました！</p>
 				</div>
 				<div class="col-sm-7">
-					<div class="embed-responsive embed-responsive-16by9" style="margin-top: 5px;margin-bottom: 5px">
+					<div class="ratio ratio-16x9" style="margin-top: 5px;margin-bottom: 5px">
 						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/awVxHEa3Dpk" frameborder="0" allowfullscreen></iframe>
 					</div>
 				</div>
@@ -96,7 +95,7 @@
 					<p>タミヤの<a href="http://tamiya.com/japan/products/70203motor_gearbox/index.htm"  target="_blank">エコモーターギヤボックス</a>を使用することで，Chrome恐竜を物理的に再現することもできる．</p>
 				</div>
 				<div class="col-sm-7">
-					<div class="embed-responsive embed-responsive-16by9" style="margin-top: 5px;margin-bottom: 5px">
+					<div class="ratio ratio-16x9" style="margin-top: 5px;margin-bottom: 5px">
 						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/mriCcrisio4" frameborder="0" allowfullscreen></iframe>
 					</div>
 				</div>
