--- a/contents/3DPrinCar/index.html
+++ b/contents/3DPrinCar/index.html
@@ -19,13 +19,12 @@
 			margin-top: 90px;
 		}
 
-		.img-responsive-overwrite {
-			margin: 0 auto;
+		body {
+			background-color: #f9f9f9;
 		}
 
-		.panelHeader {
-			color: rgb(33, 125, 187);
-			;
+		.card-body {
+			background-color: #f6faff;
 		}
 	</style>
 	<link rel="shortcut icon" href="favicon.ico">
@@ -70,9 +69,8 @@
 		<section>
 			<div class="row">
 				<div class="col-sm-12">
-					<div class="embed-responsive embed-responsive-16by9" style="margin-top: 5px;margin-bottom: 5px">
+					<div class="ratio ratio-16x9" style="margin-top: 5px;margin-bottom: 5px">
 						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/jG5BceMWTeU" frameborder="0" allowfullscreen></iframe>
-						frameborder="0" allowfullscreen></iframe>
 					</div>
 				</div>
 				<div class="col-sm-12">
@@ -95,7 +93,7 @@
 				</div>
 				<div class="col-sm-12">
 					<div class="thumbnail">
-						<img src="system.jpg">
+						<img src="system.jpg" class="img-fluid">
 						<div class="caption">
 							<p>システム構成; a)システムインタフェース概観（助手席）, b)3Dプリンタ（トランク）, c)推薦インタフェース.</p>
 						</div>
