--- a/contents/8mmFilm/badapple/index.html
+++ b/contents/8mmFilm/badapple/index.html
@@ -19,13 +19,12 @@
 			margin-top: 90px;
 		}
 
-		.img-responsive-overwrite {
-			margin: 0 auto;
+		body {
+			background-color: #f9f9f9;
 		}
 
-		.panelHeader {
-			color: rgb(33, 125, 187);
-			;
+		.card-body {
+			background-color: #f6faff;
 		}
 	</style>
 	<link rel="shortcut icon" href="favicon.ico">
@@ -61,7 +60,7 @@
 		</div>
 	</nav>
     <main>
-        <div class="container"></div>
+        <div class="container">
 		<section>
             <h1>Bad Apple!! in 8mm Film <small>OHPシートとインクジェットプリンタを用いた自作8mmフィルムの製作</small></h1>
 		</section>
@@ -80,9 +79,8 @@
 					<p>そこで，筆者はOHPシートとインクジェットプリンタを用いてSuper8互換フィルムを製造することを試みた．有名な東方のN次創作である「<a href="http://www.nicovideo.jp/watch/sm8628149" target="_blank">【東方】Bad Apple!! PV【影絵】</a>」のフィルム化を行った．</p>
 				</div>
 				<div class="col-sm-6">
-					<div class="embed-responsive embed-responsive-16by9" style="margin-top: 5px;margin-bottom: 5px">
+					<div class="ratio ratio-16x9" style="margin-top: 5px;margin-bottom: 5px">
 						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/TqPrpoFX_pE" frameborder="0" allowfullscreen></iframe>
-						frameborder="0" allowfullscreen></iframe>
 					</div>
 				</div>
 			</div>
@@ -91,7 +89,7 @@
 			<div class="row">
 				<div class="col-sm-4">
 					<div class="thumbnail">
-						<img src="film.png">
+						<img src="film.png" class="img-fluid">
 						<div class="caption">
 							<p>制作フィルム</p>
 						</div>
