--- a/contents/8mmFilm/projector/index.html
+++ b/contents/8mmFilm/projector/index.html
@@ -19,13 +19,12 @@
 			margin-top: 90px;
 		}
 
-		.img-responsive-overwrite {
-			margin: 0 auto;
+		body {
+			background-color: #f9f9f9;
 		}
 
-		.panelHeader {
-			color: rgb(33, 125, 187);
-			;
+		.card-body {
+			background-color: #f6faff;
 		}
 	</style>
 	<link rel="shortcut icon" href="favicon.ico">
@@ -85,7 +84,7 @@
 					<p>今回は機構の簡易化のため，無限軌道のフィルムとした．</p>
 				</div>
 				<div class="col-sm-6">
-					<div class="embed-responsive embed-responsive-16by9" style="margin-top: 5px;margin-bottom: 5px">
+					<div class="ratio ratio-16x9" style="margin-top: 5px;margin-bottom: 5px">
 <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/cy_mY1iS7DA" frameborder="0" allowfullscreen></iframe>
 frameborder="0" allowfullscreen></iframe>
 </div>
@@ -94,7 +93,7 @@ frameborder="0" allowfullscreen></iframe>
 </section>
 <section>
 	<div class="thumbnail">
-		<img src="soul.png">
+		<img src="soul.png" class="img-fluid">
 		<div class="caption">
 			<p>映写機; 全体像・フィルムと投影装置・ジェネバ機構・スイッチ</p>
 		</div>
@@ -104,7 +103,7 @@ frameborder="0" allowfullscreen></iframe>
 	<div class="row">
 		<div class="col-sm-4">
 			<div class="thumbnail">
-				<img src="circuit.png">
+				<img src="circuit.png" class="img-fluid">
 				<div class="caption">
 					<p>回路</p>
 				</div>
