--- a/contents/DraggableBoard/index.html
+++ b/contents/DraggableBoard/index.html
@@ -19,13 +19,12 @@
 			margin-top: 90px;
 		}
 
-		.img-responsive-overwrite {
-			margin: 0 auto;
+		body {
+			background-color: #f9f9f9;
 		}
 
-		.panelHeader {
-			color: rgb(33, 125, 187);
-			;
+		.card-body {
+			background-color: #f6faff;
 		}
 	</style>
 	<link rel="shortcut icon" href="favicon.ico">
@@ -74,9 +73,9 @@
 					<p>そこで，ドラッグ操作で実際に電気の流れる配線を作れる基板を提案する．</p>
 				</div>
 				<div class="col-sm-6">
-					<div class="embed-responsive embed-responsive-16by9" style="margin-top: 5px;margin-bottom: 5px">
+					<div class="ratio ratio-16x9" style="margin-top: 5px;margin-bottom: 5px">
 						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/1CRq5bLOMLU" frameborder="0" allowfullscreen></iframe>
-						frameborder="0" allowfullscreen></iframe>
+
 					</div>
 				</div>
 			</div>
@@ -85,7 +84,7 @@
 			<div class="row">
 				<div class="col-sm-5">
 					<div class="thumbnail">
-						<img src="system.jpg">
+						<img src="system.jpg" class="img-fluid">
 						<div class="caption">
 							<p>システム</p>
 						</div>
