--- a/contents/PUI3DPrinter/index.html
+++ b/contents/PUI3DPrinter/index.html
@@ -19,13 +19,12 @@
 			margin-top: 90px;
 		}
 
-		.img-responsive-overwrite {
-			margin: 0 auto;
+		body {
+			background-color: #f9f9f9;
 		}
 
-		.panelHeader {
-			color: rgb(33, 125, 187);
-			;
+		.card-body {
+			background-color: #f6faff;
 		}
 	</style>
 	<link rel="shortcut icon" href="favicon.ico">
@@ -70,9 +69,9 @@
 		<section>
 			<div class="row">
 				<div class="col-sm-6">
-					<div class="embed-responsive embed-responsive-16by9" style="margin-top: 5px;margin-bottom: 5px">
+					<div class="ratio ratio-16x9" style="margin-top: 5px;margin-bottom: 5px">
 						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/54m38d4nUgg" frameborder="0" allowfullscreen></iframe>
-						frameborder="0" allowfullscreen></iframe>
+
 					</div>
 				</div>
 				<div class="col-sm-6">
@@ -93,7 +92,7 @@
 				</div>
 				<div class="col-sm-5">
 					<div class="thumbnail">
-						<img src="thumbnail1.jpg">
+						<img src="thumbnail1.jpg" class="img-fluid">
 						<div class="caption">
 							<p>二面図モデリング</p>
 						</div>
@@ -105,7 +104,7 @@
 			<div class="row">
 				<div class="col-sm-6">
 					<div class="thumbnail">
-						<img src="example.png">
+						<img src="example.png" class="img-fluid">
 						<div class="caption">
 							<p>作例</p>
 						</div>
