--- a/contents/ProjectronMapping/index.html
+++ b/contents/ProjectronMapping/index.html
@@ -19,13 +19,12 @@
 			margin-top: 90px;
 		}
 
-		.img-responsive-overwrite {
-			margin: 0 auto;
+		body {
+			background-color: #f9f9f9;
 		}
 
-		.panelHeader {
-			color: rgb(33, 125, 187);
-			;
+		.card-body {
+			background-color: #f6faff;
 		}
 	</style>
 	<link rel="shortcut icon" href="favicon.ico">
@@ -76,9 +75,9 @@
 					</p>
 				</div>
 				<div class="col-sm-6">
-					<div class="embed-responsive embed-responsive-16by9" style="margin-top: 5px;margin-bottom: 5px">
+					<div class="ratio ratio-16x9" style="margin-top: 5px;margin-bottom: 5px">
 						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/N3dJ4XRDF1I" frameborder="0" allowfullscreen></iframe>
-						frameborder="0" allowfullscreen></iframe>
+
 					</div>
 				</div>
 			</div>
@@ -87,7 +86,7 @@
 			<div class="row">
 				<div class="col-sm-5">
 					<div class="thumbnail">
-						<img src="system.png">
+						<img src="system.png" class="img-fluid">
 						<div class="caption">
 							<p>システム</p>
 						</div>
@@ -116,7 +115,7 @@
 				</div>
 				<div class="col-sm-5">
 					<div class="thumbnail">
-						<img src="pseudoLighting.png">
+						<img src="pseudoLighting.png" class="img-fluid">
 						<div class="caption">
 							<p>擬似点灯</p>
 						</div>
