--- a/contents/kirbyPC/index.html
+++ b/contents/kirbyPC/index.html
@@ -19,13 +19,12 @@
 			margin-top: 90px;
 		}
 
-		.img-responsive-overwrite {
-			margin: 0 auto;
+		body {
+			background-color: #f9f9f9;
 		}
 
-		.panelHeader {
-			color: rgb(33, 125, 187);
-			;
+		.card-body {
+			background-color: #f6faff;
 		}
 	</style>
 	<link rel="shortcut icon" href="favicon.ico">
@@ -66,13 +65,13 @@
 			<h1>カービィでPC作ってみた <small>初めての自作PC</small></h1>
 		</section>
 		<section>
-			<img src="parapara.gif" class="img-responsive img-responsive-overwrite">
+			<img src="parapara.gif" class="img-fluid">
 			<p></p>
 			<p>
 				<font size="7">俺の
 					<font color="#ff0099">カービィ</font>，インテル入ってるんだぜ！！</font>
 			</p>
-			<img src="thumbnail.gif" class="img-responsive img-responsive-overwrite">
+			<img src="thumbnail.gif"  class="img-fluid">
 			<p></p>
 		</section>
 		<setion>
@@ -80,7 +79,7 @@
 				<div class="row">
 					<div class="col-sm-6">
 						<div class="thumbnail">
-							<img src="kuchi.jpg">
+							<img src="kuchi.jpg"  class="img-fluid">
 							<div class="caption">
 								<p>口のどアップ</p>
 							</div>
@@ -96,7 +95,7 @@
 				<div class="row">
 					<div class="col-sm-6">
 						<div class="thumbnail">
-							<img src="ura.jpg">
+							<img src="ura.jpg" class="img-fluid">
 							<div class="caption">
 								<p>裏面</p>
 							</div>
@@ -112,7 +111,7 @@
 				<div class="row">
 					<div class="col-sm-6">
 						<div class="thumbnail">
-							<img src="running.jpg">
+							<img src="running.jpg" class="img-fluid">
 							<div class="caption">
 								<p>起動した様子</p>
 							</div>
