--- a/contents/pinteraction/index.html
+++ b/contents/pinteraction/index.html
@@ -19,13 +19,12 @@
 			margin-top: 90px;
 		}
 
-		.img-responsive-overwrite {
-			margin: 0 auto;
+		body {
+			background-color: #f9f9f9;
 		}
 
-		.panelHeader {
-			color: rgb(33, 125, 187);
-			;
+		.card-body {
+			background-color: #f6faff;
 		}
 	</style>
 	<link rel="shortcut icon" href="favicon.ico">
@@ -74,9 +73,9 @@
 					<p>今回は，回路・プログラムを作成開始，修正，そしてパラメータの決定という3つのステップに対し，抜き挿しによってユーザ支援を行った．</p>
 				</div>
 				<div class="col-sm-6">
-					<div class="embed-responsive embed-responsive-16by9" style="margin-top: 5px;margin-bottom: 5px">
+					<div class="ratio ratio-16x9" style="margin-top: 5px;margin-bottom: 5px">
 						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/KxpW07cH5cA" frameborder="0" allowfullscreen></iframe>
-						frameborder="0" allowfullscreen></iframe>
+
 					</div>
 				</div>
 			</div>
@@ -99,7 +98,7 @@
 			<div class="row">
 				<div class="col-sm-5">
 					<div class="thumbnail">
-						<img src="system.png">
+						<img src="system.png" class="img-fluid">
 						<div class="caption">
 							<p>システム</p>
 						</div>
@@ -131,16 +130,16 @@
 			<div class="row">
 				<div class="col-sm-6">
 					<h2>製作例</h2>
-					<div class="embed-responsive embed-responsive-16by9" style="margin-top: 5px;margin-bottom: 5px">
+					<div class="ratio ratio-16x9" style="margin-top: 5px;margin-bottom: 5px">
 						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/sYAfmdxjHkc" frameborder="0" allowfullscreen></iframe>
-						frameborder="0" allowfullscreen></iframe>
+
 					</div>
 				</div>
 				<div class="col-sm-6">
 					<h2>ABPro2015での発表</h2>
-					<div class="embed-responsive embed-responsive-16by9" style="margin-top: 5px;margin-bottom: 5px">
+					<div class="ratio ratio-16x9" style="margin-top: 5px;margin-bottom: 5px">
 						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/jKALSRdZyR0" frameborder="0" allowfullscreen></iframe>
-						frameborder="0" allowfullscreen></iframe>
+
 					</div>
 				</div>
 			</div>
