--- a/index.html
+++ b/index.html
@@ -19,13 +19,12 @@
 			margin-top: 90px;
 		}
 
-		.img-responsive-overwrite {
-			margin: 0 auto;
+		body {
+			background-color: #f9f9f9;
 		}
 
-		.panelHeader {
-			color: rgb(33, 125, 187);
-			;
+		.card-body {
+			background-color: #f6faff;
 		}
 	</style>
 	<link rel="shortcut icon" href="favicon.ico">
@@ -77,7 +76,7 @@
 						<div class="card-body">
 							<h5 class="card-title">MultiplaneGirl</h5>
 							<p class="card-text">2018/6-2022</p>
-							<a href="contents/reallive2d/index.html" class="btn btn-primary">詳細</a>
+							<a href="contents/reallive2d/index.html" class="btn btn-outline-secondary">詳細</a>
 						</div>
 					</div>
 				</div>
@@ -89,7 +88,7 @@
 						<div class="card-body">
 							<h5 class="card-title">3DPrinCar</h5>
 							<p class="card-text">2017/5-2018/1</p>
-							<a href="contents/3DPrinCar/index.html" class="btn btn-primary">詳細</a>
+							<a href="contents/3DPrinCar/index.html" class="btn btn-outline-secondary">詳細</a>
 						</div>
 					</div>
 				</div>
@@ -101,7 +100,7 @@
 						<div class="card-body">
 							<h5 class="card-title">ICレスゲーム機</h5>
 							<p class="card-text">2017/9</p>
-							<a href="contents/8mmFilm/game/index.html" class="btn btn-primary">詳細</a>
+							<a href="contents/8mmFilm/game/index.html" class="btn btn-outline-secondary">詳細</a>
 						</div>
 					</div>
 				</div>
@@ -113,7 +112,7 @@
 						<div class="card-body">
 							<h5 class="card-title">背負型3Dプリンタ</h5>
 							<p class="card-text">2017/3-2018/3</p>
-							<a href="https://sites.google.com/view/gutugutu3030/quanku-guan-xinai/3dpurintawobeifuttehuajianshitahua" class="btn btn-primary">詳細</a>
+							<a href="https://sites.google.com/view/gutugutu3030/quanku-guan-xinai/3dpurintawobeifuttehuajianshitahua" class="btn btn-outline-secondary">詳細</a>
 						</div>
 					</div>
 				</div>
@@ -125,7 +124,7 @@
 						<div class="card-body">
 							<h5 class="card-title">Theater</h5>
 							<p class="card-text">2017/1-2017/2</p>
-							<a href="contents/Theater/index.html" class="btn btn-primary">詳細</a>
+							<a href="contents/Theater/index.html" class="btn btn-outline-secondary">詳細</a>
 						</div>
 					</div>
 				</div>
@@ -137,7 +136,7 @@
 						<div class="card-body">
 							<h5 class="card-title">ミニミニ8mm映写機</h5>
 							<p class="card-text">2017/1</p>
-							<a href="contents/8mmFilm/projector/index.html" class="btn btn-primary">詳細</a>
+							<a href="contents/8mmFilm/projector/index.html" class="btn btn-outline-secondary">詳細</a>
 						</div>
 					</div>
 				</div>
@@ -149,7 +148,7 @@
 						<div class="card-body">
 							<h5 class="card-title">Paper Battler</h5>
 							<p class="card-text">2017/1</p>
-							<a href="contents/PaperBattler/index.html" class="btn btn-primary">詳細</a>
+							<a href="contents/PaperBattler/index.html" class="btn btn-outline-secondary">詳細</a>
 						</div>
 					</div>
 				</div>
@@ -161,7 +160,7 @@
 						<div class="card-body">
 							<h5 class="card-title">Pocon</h5>
 							<p class="card-text">2016/7-2018/3</p>
-							<a href="contents/PUI3DPrinter/index.html" class="btn btn-primary">詳細</a>
+							<a href="contents/PUI3DPrinter/index.html" class="btn btn-outline-secondary">詳細</a>
 						</div>
 					</div>
 				</div>
@@ -173,7 +172,7 @@
 						<div class="card-body">
 							<h5 class="card-title">やさしいギルガメッシュ</h5>
 							<p class="card-text">2016/9</p>
-							<a href="contents/Gilgamesh/index.html" class="btn btn-primary">詳細</a>
+							<a href="contents/Gilgamesh/index.html" class="btn btn-outline-secondary">詳細</a>
 						</div>
 					</div>
 				</div>
@@ -185,7 +184,7 @@
 						<div class="card-body">
 							<h5 class="card-title">Fitter</h5>
 							<p class="card-text">2016/7-2018/3</p>
-							<a href="contents/Fitter/index.html" class="btn btn-primary">詳細</a>
+							<a href="contents/Fitter/index.html" class="btn btn-outline-secondary">詳細</a>
 						</div>
 					</div>
 				</div>
@@ -197,7 +196,7 @@
 						<div class="card-body">
 							<h5 class="card-title">カービィでPC作ってみた</h5>
 							<p class="card-text">2016/7</p>
-							<a href="contents/kirbyPC/index.html" class="btn btn-primary">詳細</a>
+							<a href="contents/kirbyPC/index.html" class="btn btn-outline-secondary">詳細</a>
 						</div>
 					</div>
 				</div>
@@ -209,7 +208,7 @@
 						<div class="card-body">
 							<h5 class="card-title">自作8mmフィルムプロジェクト</h5>
 							<p class="card-text">2016/5</p>
-							<a href="contents/8mmFilm/index.html" class="btn btn-primary">詳細</a>
+							<a href="contents/8mmFilm/index.html" class="btn btn-outline-secondary">詳細</a>
 						</div>
 					</div>
 				</div>
@@ -221,7 +220,7 @@
 						<div class="card-body">
 							<h5 class="card-title">Processing コンソールサーチモード</h5>
 							<p class="card-text">2016/1</p>
-							<a href="https://github.com/gutugutu3030/gprintMode" class="btn btn-primary">詳細</a>
+							<a href="https://github.com/gutugutu3030/gprintMode" class="btn btn-outline-secondary">詳細</a>
 						</div>
 					</div>
 				</div>
@@ -233,7 +232,7 @@
 						<div class="card-body">
 							<h5 class="card-title">pinteraction</h5>
 							<p class="card-text">2015/9-2016/3</p>
-							<a href="contents/pinteraction/index.html" class="btn btn-primary">詳細</a>
+							<a href="contents/pinteraction/index.html" class="btn btn-outline-secondary">詳細</a>
 						</div>
 					</div>
 				</div>
@@ -245,7 +244,7 @@
 						<div class="card-body">
 							<h5 class="card-title">ドラッグで配線できる基板</h5>
 							<p class="card-text">2015/12</p>
-							<a href="contents/DraggableBoard/index.html" class="btn btn-primary">詳細</a>
+							<a href="contents/DraggableBoard/index.html" class="btn btn-outline-secondary">詳細</a>
 						</div>
 					</div>
 				</div>
@@ -257,7 +256,7 @@
 						<div class="card-body">
 							<h5 class="card-title">Gesture Processing</h5>
 							<p class="card-text">2015/9</p>
-							<a href="https://www.youtube.com/watch?v=3zLj8GU9hfM" class="btn btn-primary">詳細</a>
+							<a href="https://www.youtube.com/watch?v=3zLj8GU9hfM" class="btn btn-outline-secondary">詳細</a>
 						</div>
 					</div>
 				</div>
@@ -269,7 +268,7 @@
 						<div class="card-body">
 							<h5 class="card-title">Processing RealtimeMode</h5>
 							<p class="card-text">2015/3</p>
-							<a href="contents/realtimeProcessing/index.html" class="btn btn-primary">詳細</a>
+							<a href="contents/realtimeProcessing/index.html" class="btn btn-outline-secondary">詳細</a>
 						</div>
 					</div>
 				</div>
@@ -281,7 +280,7 @@
 						<div class="card-body">
 							<h5 class="card-title">流しそうめん音ゲー</h5>
 							<p class="card-text">2014/9</p>
-							<a href="contents/somen/index.html" class="btn btn-primary">詳細</a>
+							<a href="contents/somen/index.html" class="btn btn-outline-secondary">詳細</a>
 						</div>
 					</div>
 				</div>
@@ -293,7 +292,7 @@
 						<div class="card-body">
 							<h5 class="card-title">オリジナルテンキー</h5>
 							<p class="card-text">2014/3</p>
-							<a href="https://sites.google.com/view/gutugutu3030/other/tenkiwojietishitegaizaosuru" class="btn btn-primary">詳細</a>
+							<a href="https://sites.google.com/view/gutugutu3030/other/tenkiwojietishitegaizaosuru" class="btn btn-outline-secondary">詳細</a>
 						</div>
 					</div>
 				</div>
@@ -305,7 +304,7 @@
 						<div class="card-body">
 							<h5 class="card-title">Projectron Mapping</h5>
 							<p class="card-text">2013/10-2014/12</p>
-							<a href="contents/ProjectronMapping/index.html" class="btn btn-primary">詳細</a>
+							<a href="contents/ProjectronMapping/index.html" class="btn btn-outline-secondary">詳細</a>
 						</div>
 					</div>
 				</div>
@@ -317,7 +316,7 @@
 						<div class="card-body">
 							<h5 class="card-title">デュエルディスク</h5>
 							<p class="card-text">2013/5</p>
-							<a href="contents/duelDisk/index.html" class="btn btn-primary">詳細</a>
+							<a href="contents/duelDisk/index.html" class="btn btn-outline-secondary">詳細</a>
 						</div>
 					</div>
 				</div>
@@ -329,7 +328,7 @@
 						<div class="card-body">
 							<h5 class="card-title">Hako</h5>
 							<p class="card-text">2012/11</p>
-							<a href="https://www.youtube.com/watch?v=ZBfd_9pjG98" class="btn btn-primary">詳細</a>
+							<a href="https://www.youtube.com/watch?v=ZBfd_9pjG98" class="btn btn-outline-secondary">詳細</a>
 						</div>
 					</div>
 				</div>
@@ -341,7 +340,7 @@
 						<div class="card-body">
 							<h5 class="card-title">ARモデリングツール</h5>
 							<p class="card-text">2012/9</p>
-							<a href="https://www.youtube.com/watch?v=pb9ExH-FXCY" class="btn btn-primary">詳細</a>
+							<a href="https://www.youtube.com/watch?v=pb9ExH-FXCY" class="btn btn-outline-secondary">詳細</a>
 						</div>
 					</div>
 				</div>
