--- a/profile.html
+++ b/profile.html
@@ -19,13 +19,12 @@
 			margin-top: 90px;
 		}
 
-		.img-responsive-overwrite {
-			margin: 0 auto;
+		body {
+			background-color: #f9f9f9;
 		}
 
-		.panelHeader {
-			color: rgb(33, 125, 187);
-			;
+		.card-body {
+			background-color: #f6faff;
 		}
 	</style>
 	<link rel="shortcut icon" href="favicon.ico">
@@ -67,7 +66,7 @@
 		</div>
 		<div class="row">
 			<div class="col-sm-4">
-				<img class="img-rounded img-responsive" src="icon.svg" />
+				<img src="icon.svg" class="img-fluid">
 			</div>
 			<div class="col-sm-8">
 				<h2>秋山 耀
